fix tap on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -115,3 +115,6 @@ span {
 .info ul li {
 	margin-bottom: 10px;
 }
+
+@media screen and (max-width: 768px) {
+}
